@@ -117,10 +117,10 @@ public class WLInstantiatingIterator  implements WizardDescriptor.InstantiatingI
                 JComponent jc = (JComponent) c;
                 // Step #.
                 jc.putClientProperty(
-                    WizardDescriptor.PROP_CONTENT_SELECTED_INDEX, new Integer(i)); // NOI18N
+                    WizardDescriptor.PROP_CONTENT_SELECTED_INDEX, Integer.valueOf(i));
 
                 // Step name (actually the whole list for reference).
-                jc.putClientProperty(WizardDescriptor.PROP_CONTENT_DATA, steps); // NOI18N
+                jc.putClientProperty(WizardDescriptor.PROP_CONTENT_DATA, steps);
             }
         }
     }
